Finishing Navigate Graph with Intent

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,33 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.fragment.app.FragmentContainerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main_nav_host_fragment"
+    android:name="androidx.navigation.fragment.NavHostFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:weightSum="3"
-    tools:context=".presentation.main.MainActivity">
-
-    <fragment
-        android:id="@+id/fragment_one"
-        android:name="com.jaws.fragmentactivityexample.presentation.fragmentone.FragmentOne"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"/>
-
-    <fragment
-        android:id="@+id/fragment_two"
-        android:name="com.jaws.fragmentactivityexample.presentation.fragmenttwo.FragmentTwo"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"/>
-
-    <fragment
-        android:id="@+id/fragment_three"
-        android:name="com.jaws.fragmentactivityexample.presentation.fragmentthree.FragmentThree"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"/>
-
-</LinearLayout>
+    app:defaultNavHost="true"
+    app:navGraph="@navigation/main_nav_graph"
+    tools:context=".presentation.main.MainActivity" />
